Bug 1101032 - Fixed ExecutableAllocatorWin.cpp compilation on mingw. r=luke